# neslter-stingray

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  anh.token  dashapp.py  data_bin.py  data_merge.py  docker-compose.yml  environment.yml  get_task.py  labelstudio.token  ls_config.json  media_list.py  pyproject.toml  requirements.txt  time_bin.py  utils.py
assets/: style.css
dash_data/: NESLTER_station_list.csv
dash_data/misc/: NESLTER_transect_bathymetry.csv
image_analysis/: get_tator_link.py
old_code/: data_bin.py  data_merge.py
src/ctdtools/: download.py
src/neslter_stingray.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/stingray/: getctd.py  process.py  time_bin.py  utils.py
src/stingray/cli/: main.py  process.py  sensors.py
src/stingray/config/: columns.py  units.py
src/stingray/core/: binning.py
src/stingray/dashboard/: app.py
src/stingray/data_reference/: spec.mat
src/stingray/image_analysis/: concat_output.sh  frame_timestamp.py
src/stingray/images/: abundance.py  add_media.py  frame_timestamp.py  generate_training.py  get_tator_link.py
src/stingray/io/: csv.py  indexing.py  suna.py
src/stingray/logging/: setup.py
src/stingray/pipelines/: process_cruise.py
src/stingray/profiles/: identify.py
src/stingray/sensors/: __init__.py  ctd.py  fluorometer.py  merge.py  par.py  suna.py
src/stingray/spatial/: gps.py  stations.py
src/stingray/stats/: poisson.py
src/stingray/temporal/: matlab.py  parsing.py
src/stingray/utils/: __init__.py  gridding.py  spatial.py  temporal.py
src/stingraytools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
suna_calibration/: 20220729_EN687_SNA1903C.CAL  20230111_EN695_SNA1903E.CAL  20230429_HRS2303_SNA1903F.CAL  20230807_EN706_SNA1903G.CAL  20231011_AR77_SNA1903H.CAL  20240202_EN712_SNA1903I.CAL  20240426_EN715_SNA1903L.CAL  20240802_EN720_SNA1903N.CAL  20241115_AE2426_SNA1903O.CAL  20250117_EN727_SNA1903Q.CAL  suna_hdr.txt
