[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stingraytools"
version = "0.1.0"
description = "NES-LTER Stingray data processing and visualization tools"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Anh Pham" },
    { name = "Sidney Batchelder" },
    { name = "Heidi Sosik" },
]
keywords = [
    "NES-LTER",
    "Stingray",
    "ISIIS",
    "oceanography",
    "sensor-processing",
    "dashboard",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "scipy>=1.11",
    "plotly>=5",
    "dash>=3",
    "flask>=3",
    "werkzeug>=3",
    "jinja2>=3.1",
    "numba>=0.59",
    "PyYAML>=6",
    "tqdm>=4.64",
]

[project.urls]
Homepage = "https://github.com/anhph95/StingrayTools"
Repository = "https://github.com/anhph95/StingrayTools"
Issues = "https://github.com/anhph95/StingrayTools/issues"

[project.scripts]
stingray = "stingray.cli.main:main"

[project.optional-dependencies]
dev = [
    "jupyter>=1",
    "ipykernel>=6.29",
    "pytest>=8",
]

shadowgraph = [
    "opencv-python",
    "tator",
]

all = [
    "jupyter>=1",
    "ipykernel>=6.29",
    "pytest>=8",
    "opencv-python",
    "tator",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["stingray*", "ctd_tools*"]

[tool.setuptools.package-data]
stingray = [
    "data_reference/*",
]